# apps/backend/src/demands/dtos/CreateDemandItemDTO.ts
@@ -1,0 +1,6 @@
+export interface CreateDemandItemDTO {
+   description: string;
+   plannedTotalTons: number;
+   producedTotalTons?: number;
+}
+
