# apps/backend/src/demands/dtos/UpdateDemandItemDTO.ts
@@ -1,0 +1,6 @@
+export interface UpdateDemandItemDTO {
+   description?: string;
+   plannedTotalTons?: number;
+   producedTotalTons?: number;
+}
+
